--- a/jpf_hanjie.html
+++ b/jpf_hanjie.html
@@ -7,8 +7,8 @@
       Tutorial Case
 
       Hanjie Interactive Puzzle
-      Author: 
-      Date:   
+      Author: Daniel Garcia
+      Date:   3-2-20
 
       Filename:   jpf_hanjie.html
 
@@ -19,6 +19,11 @@
    <title>The Hanjie Puzzle</title>
    <link href="jpf_base.css" rel="stylesheet" />
    <link href="jpf_layout.css" rel="stylesheet" />   
+   <Link href="jpf_hanjie.css" rel="stylesheet" />
+
+   <script src=""></script>
+   <script src="jpf_grids1.js" async></script>
+   <script src="jpf_hanjie.js" async></script>
 </head>
 
 <body>
